Fix CORS config for Vercel deployment